force-app/main/default/objects/SVMXC__Parts_Request_Line__c/SVMXC__Parts_Request_Line__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to capture parts and quantities in a parts request. Parts requests do not have the context of a service event.</description>
    <label>Parts Request Line</label>
    <nameField>
        <displayFormat>PRQL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>