force-app/main/default/objects/SVMXC__Parts_Request_Line__c/fields/Inventory_Authority_Source__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Authority_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To populate the inventory authority of requested location.
Flows from process builder.</description>
    <label>Inventory Authority Source</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parts_Request_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>