force-app/main/default/objects/SVMXC__Parts_Request_Line__c/fields/SVMXC__Closed_By__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that closed this parts request line. This is set automatically when the receipt is processed.</description>
    <inlineHelpText>User that closed this parts request line. This is set automatically when the receipt is processed.</inlineHelpText>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parts_Request_Line_Closed_By</relationshipName>
    <type>Lookup</type>
</CustomField>