force-app/main/default/objects/SVMXC__Parts_Request_Line__c/fields/SVMXC__Posted_To_Inventory__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Posted_To_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if this receipt has been posted to product inventory.</description>
    <inlineHelpText>Flag indicating if this receipt has been posted to product inventory.</inlineHelpText>
    <label>Posted To Inventory</label>
    <type>Checkbox</type>
</CustomField>