force-app/main/default/objects/SVMXC__Parts_Request_Line__c/fields/SVMXC__Quantity_Shipment_Initiated2__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Quantity_Shipment_Initiated2__c</fullName>
    <description>Quantity of product for which shipment has been initiated.</description>
    <inlineHelpText>Quantity of product for which shipment has been initiated.</inlineHelpText>
    <label>Qty Shipment Initiated</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>