force-app/main/default/objects/SVMXC__Parts_Request_Line__c/fields/SVMXC__Serial_Number_List__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Serial_Number_List__c</fullName>
    <description>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</description>
    <inlineHelpText>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</inlineHelpText>
    <label>Serial Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>