force-app/main/default/objects/SVMXC__Parts_Request_Line__c/validationRules/SVMXC__SVMXC_ValidateDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateDateRequired</fullName>
    <active>true</active>
    <description>Required date must be a future date.</description>
    <errorConditionFormula>AND(ISNEW(),  SVMXC__Date_Required__c &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>SVMXC__Date_Required__c</errorDisplayField>
    <errorMessage>Date required cannot be a past date.</errorMessage>
</ValidationRule>