force-app/main/default/objects/SVMXC__Parts_Request_Line__c/validationRules/SVMXC__SVMXC_ValidateQuantityChange.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateQuantityChange</fullName>
    <active>true</active>
    <description>Quantity Required cannot be changed.</description>
    <errorConditionFormula>AND(!ISNEW(),   OR(SVMXC__Quantity_Shipment_Initiated2__c &gt; 0,  SVMXC__Quantity_Shipped2__c &gt; 0), ISCHANGED( SVMXC__Quantity_Required2__c ))</errorConditionFormula>
    <errorDisplayField>SVMXC__Quantity_Required2__c</errorDisplayField>
    <errorMessage>Quantity Required cannot be changed once shipment activity has been initiated. Create a new Parts request instead.</errorMessage>
</ValidationRule>