force-app/main/default/objects/SVMXC__Parts_Request_Line__c/validationRules/SVMXC__SVMXC_ValidateQuantityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateQuantityRequired</fullName>
    <active>true</active>
    <description>Required Quantity must be greater than zero.</description>
    <errorConditionFormula>SVMXC__Quantity_Required2__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>SVMXC__Quantity_Required2__c</errorDisplayField>
    <errorMessage>Required Quantity must be greater than zero.</errorMessage>
</ValidationRule>